--- a/package.json
+++ b/package.json
@@ -20,23 +20,26 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
-    "@fortawesome/fontawesome-free": "~5.6.3",
-    "@types/chart.js": "^2.7.40",
+    "@fortawesome/fontawesome-free": "^5.6.3",
+    "@types/chart.js": "^2.7.45",
     "angular-bootstrap-md": "^7.4.1",
-    "chart.js": "^2.7.2",
+    "bootstrap": "^4.3.1",
+    "chart.js": "^2.5.0",
     "core-js": "^2.5.4",
-    "hammerjs": "~2.0.8",
+    "hammerjs": "^2.0.8",
+    "jquery": "^3.3.1",
+    "popper": "^1.0.1",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.0",
+    "@angular-devkit/build-angular": "^0.13.4",
     "@angular/cli": "~7.0.4",
-    "@angular/compiler-cli": "~7.0.0",
+    "@angular/compiler-cli": "^7.2.7",
     "@angular/language-service": "~7.0.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
